# stage

./: README.md  eteindreTout.sh  take_pict.py
3d/:  socle1.stl  AllinV1.FCStd  AllinV1.FCStd1  V1.FCStd  V1.FCStd1  V1bonne.FCStd  V1bonne.FCStd1  V2.FCStd  V2.FCStd1  V3.FCStd  V4.FCStd  V4.FCStd1  V5.FCStd  enrouleur.blend  piece.blend  piece.blend1  piece.fbx  piece.stl  piece2.mtl  porteetsocle.stl  rpi.dae  supportcamera.FCStd  supportcamera.FCStd1  supportcamera.stl  supportv2.fcstd  supportv2.fcstd1  test.FCStd  test.FCStd1
3d/freecad/: support.FCStd  supportBas.stl  test1.FCStd  test1.FCStd1
Ancien/SASDIE/JavaDir/: testjava.java  testjava.java~
Ancien/SASDIE/MyApsIsticLuaLib/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  clear_cmake_generated_files.sh  cmake_install.cmake
Ancien/SASDIE/MyApsIsticLuaLib/include/: common.h  common.h.in  common.h.in~  common.h~  network.h  network.h~
Ancien/SASDIE/MyApsIsticLuaLib/lua-cjson-2.1.0/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
Ancien/SASDIE/MyApsIsticLuaLib/src/: #network.c©fg#  lua_bindings.c  lua_bindings.c~  network.c  network.c~  services.c  services.c~  trash
Ancien/SASDIE/MyApsIsticLuaLib/webApps/MyAppsIstic/: index.html  myappsistic.js
Ancien/SASDIE/MyApsIsticLuaLib/webApps/loadAPF/: index.html  loadapf.js
Ancien/SASDIE/serveur/: #testSensors.lua#  calib_left.py  calib_right.py  distanceGPS.lua~  distanceGPS.lua~.save.1  effaceMetadata.lua  filterFichiers.lua  info.css  lireMetadata.lua  listFichiers.lua  myapps.lua  myapps.lua.macosx  myapps.lua~  position2.lua  position2.lua~  produceMap2.lua  publishFile.lua  sendImages.lua  sendImages2.lua  sendImages2.lua.save  sendImages2.lua.save.1  setActions2.lua  take_pict.py  take_pict.py.save  take_pictures.py  take_pictures.py.save  test.html  testCache.lua  testConnect.lua  testConnect.lua~  testJson.lua  testPhoto.lua  testSensors.lua  testSensors.lua~  tmp.txt  urlFichiers.lua
UnityStage/Assets/: Away.mat  Home.mat  mini_map_render (0).renderTexture  mini_map_render (1).renderTexture  mini_map_render (2).renderTexture  mini_map_render (3).renderTexture  mini_map_render (4).renderTexture  mini_map_render (5).renderTexture  mini_map_render (6).renderTexture  mini_map_render (7).renderTexture
UnityStage/Assets/Materials/: aspect-ratio-grid-items.mat
UnityStage/Assets/TeamBallGameTemplate/Scenes/: SampleScene.unity
UnityStage/ProjectSettings/: ProjectSettings.asset
UnityStage/Temp/__Backupscenes/: 0.backup
cron/: contrab.txt
installation-pilotes/Driver GPS/: autorun.inf  install.txt
installation-pilotes/Driver GPS/Mac/GPS Utility/: GPSUtility Intel Power PC OS X version 2.0.dmg  Mac_GPSUtility_v2.dmg
installation-pilotes/Driver GPS/Mac/USB Driver/MAC OS 10.6/: MAC 10.6.X prolific driver reinstall instructions..txt
mqtt_paho/: client.py
python/: #photo.py#  .photo.py.swp  anemometre.py  captureImage.py  captureImageOpenCV  captureImageOpenCV.py  captureVideo.py  datePerso.py  exifInfo.py  gps.py  init-photo.sh  init-photo.sh~  oldphoto.py  photo.py  photo.py~  recombineImage.py  souris.py  start-21.sh  start-39.sh  start-60.sh  start-server.sh  start-server.sh~  start.sh  take_pict2.py  thread1.py  thread2.py  thread3.py  thread4.py  threadGraphique.py  videoPlayer.py  videoPlayer.py.save
sauve/ballonserver/: init-photo.sh  photo.py  start.sh
video/: video.h264
web/: image.html  index.html
